--- a/public/grid2/index.html
+++ b/public/grid2/index.html
@@ -147,7 +147,7 @@
             <div  class="ft-logo-def">
               <!-- <img :src="pageData.Basic.Default_Logo"> -->
             </div>
-            <div class="ft-logo-hint">本活动由鲸鱼活动提供支持</div>
+            <div class="ft-logo-hint">本活动由 tonyjiafan 提供支持</div>
           </template>
                 <img v-else :src="pageData.Basic.Logo_Url">
             </div>
@@ -155,7 +155,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-
+    <!-- <script src="../../visit.js"></script> -->
     <!-- delStart -->
     <script src="https://www.jingyuhuodong.com/template/jquery-1.8.3.min.js"></script>
     <script src="./js/website.js"></script>
